- ZLength for BBox height
- skipped Points in geometry of sketch
- added single copy and PDN copy (object flattening)
- added Zip open of STEP file(s)
- added option to check updates
- added Sketch simplifier
- added loading pad poly in fp
- fixed simplify sketch
- improved Qt5 compatibility
- added workaround for STEP exporting OCC 7.2.0
- improved STEP exporting with hierarchy, onelevel, flat options
- added QtGui.QApplication.processEvents() for Qt5
- skipping \" characters
- added 'links' for import mode settings
- moved the generation of PCB inside the Sketch to Face process
- adding Geometry and Constraints as a single instruction to avoid long delay with sketches
- added Constrinator
- allowed ArcOfCircle for Polyline Pads
- roundrect pads for import footprint supported
- assigned combobox to defined colors
- improved generation of complex footprint with arcs
- partially implemented Circle Geometry primitive
- improved writing fp data 
- push Moved 3D model(s) to kicad PCB
- sync Reference in case of lost correct Label (import export STEP file with Links)
- improved precision on board data using "{:.3f}".format for pushpcb & Pushfootprint and angles
- re-introduced ability to use footprints with edge cuts inside
- restored ability to load pcb edge from footprint instead of Sketch
- added option (not used) to simplify compsolid to solid
- added support for pcb reading gr_poly on Edge.Cuts
- improved fp parsing for custom geo
- improved fp parsing for custom geo again
- first implementation of bspline edge import (TBD: spline w control points, push to pcb)
- pushpcb working with gr_curves, downgrading to arcs and lines (TBD: use spline)
- spline w control points
- fixing pushing pcb
- adding support for double quotes on kicad_pcb and kicad_mod format
- bsplines allowed for push&pull kicad_pcb
- fixed hanging issue on AppImages (thread)
- improved simplify sketch
- fixed wbs ordering
- added edges2sketch function
- most clean code and comments done